<resources>
    <string name="app_name">Car Tracker</string>
    <string name="crop_editBtnTxt">Crop &amp; Edit</string>
    <string name="pass_strength_weak">Password Strength : Weak</string>
    <string name="pass_strength_med">Password Strength : Medium</string>
    <string name="pass_strength_good">Password Strength : Good</string>
    <string name="pass_strength_strong">Password Strength : Strong</string>
    <string name="password_weak">Password Too Weak.</string>

    <string name="open">Open</string>
    <string name="close">close</string>

    <string name="base_url">https://vehicle-locator.herokuapp.com/</string>
    <string name="login_php_url">https://car-locator.herokuapp.com/loginA.php</string>
    <string name="otp_url">https://car-locator.herokuapp.com/send_otp.php</string>
    <string name="verifyOTPPHP">https://car-locator.herokuapp.com/verify_otp.php</string>
    <string name="resend_otp_url">https://car-locator.herokuapp.com/resend_otp.php</string>
    <string name="checkindburl">https://car-locator.herokuapp.com/checkInDataBase.php</string>
    <string name="signup_php_url">https://car-locator.herokuapp.com/signUpA.php</string>
    <string name="deluserurl">https://car-locator.herokuapp.com/deluserfromdb.php</string>
    <string name="write_log_url">https://car-locator.herokuapp.com/writelogstat.php</string>
    <string name="check_log_url">https://car-locator.herokuapp.com/checklogstat.php</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="sharedPref_Login_loggedIn">Logged</string>
    <string name="sharedPref_Login_verified">verified</string>
    <string name="loading">Loading…</string>
    <string name="gotologin"><u>Login or SignUp with another account.</u></string>
    <string name="company_logo">Company Logo</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login"><b>Login</b></string>
    <string name="social_media_header">Get In Touch</string>
    <string name="email_vehicle_id">Email/Vehicle ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="justtxtA">Now never let your car be out of your sight...</string>
    <string name="jsttxtB">Track your car anytime anywhere</string>
    <string name="timetxt">Your location at : --:--:--</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="servicestartstopbtntxt">Start tracking your car</string>
    <string name="otp_is_sent_to">OTP is sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="name">Name</string>
    <string name="vehicle_id">Vehicle ID</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="type_password">Type Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="rationale_coarse_location">This app needs access to your location to know where you are.</string>
    <string name="rationale_internet_location">This app needs access to Internet.</string>
    <string name="rationale_vibrate_location">This app needs access to Vibration to perform properly.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="returned_from_app_settings_to_activity">Returned from app settings to MainActivity with the following permissions:
        \n\nCamera: %s
        \nLocation: %s
        \nSMS: %s
        \nContacts: %s</string>
    <string name="title_activity_default">DefaultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
