<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainParentRel"
    android:background="@drawable/grad_bg_2"
    android:isScrollContainer="true"
    android:scrollbars="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/baseRelLayoutSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="ObsoleteLayoutParam">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/company_logo"
                android:src="@drawable/company_logo" />

            <TextView
                android:id="@+id/signUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <RelativeLayout
                android:id="@+id/inpRelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUP"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@id/nameTV"
                    android:background="@drawable/et_box"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null" />

                <TextView
                    android:id="@+id/vehIDTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nameET"
                    android:text="@string/vehicle_id"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/vehIDET"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@id/vehIDTV"
                    android:background="@drawable/et_box"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null" />

                <TextView
                    android:id="@+id/mailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vehIDET"
                    android:text="@string/enter_email_address"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/mailET"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@id/mailTV"
                    android:background="@drawable/et_box"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null" />

                <TextView
                    android:id="@+id/passTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mailET"
                    android:text="@string/type_password"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/passET"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@id/passTV"
                    android:background="@drawable/et_box"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null" />

                <ImageButton
                    android:id="@+id/viewPass"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_below="@+id/passTV"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_baseline_visibility_off_24px" />

                <TextView
                    android:id="@+id/passStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passET"
                    android:paddingStart="18dp"
                    android:paddingTop="4dp"
                    android:text="@string/pass_strength_weak"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/repassTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passStrength"
                    android:text="@string/retype_password"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/repassET"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@id/repassTV"
                    android:background="@drawable/et_box"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="35dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null" />

                <ImageButton
                    android:id="@+id/viewRePass"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_below="@+id/repassTV"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_baseline_visibility_off_24px" />

                <TextView
                    android:id="@+id/repassStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/repassET"
                    android:paddingStart="18dp"
                    android:paddingTop="4dp"
                    android:text="@string/pass_strength_weak"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/SignUpBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inpRelLayout"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_bt_red"
                android:elevation="10dp"
                android:onClick="signUpClick"
                android:shadowColor="@android:color/black"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="100"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>
    </ScrollView>

    <include
        android:id="@+id/progressLayout"
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        android:visibility="invisible" />

</RelativeLayout>