<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/grad_bg">

    <RelativeLayout
        android:id="@+id/baseOTPLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_is_sent_to"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/sentTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <com.chaos.view.PinView
            android:id="@+id/otp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLayout"
            android:layout_marginStart="15dp"
            android:cursorVisible="true"
            android:focusable="false"
            android:inputType="number"
            android:paddingTop="35dp"
            android:textColor="@color/white"
            app:cursorColor="@android:color/white"
            app:itemCount="6"
            app:itemRadius="5dp"
            app:lineColor="@color/white"
            app:lineWidth="3dp"
            app:viewType="rectangle" />

        <TextView
            android:id="@+id/goToLoginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/otp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/gotologin"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/keypad"
            android:layout_margin="0dp"
            android:background="@drawable/rect_btn_red"
            android:padding="0dp"
            android:text="@string/resend_otp"
            android:textColor="@color/white" />

        <include
            android:id="@+id/keypad"
            layout="@layout/keypad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <include
        android:id="@+id/progressLayout"
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>