<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    app:layoutDescription="@xml/activity_adduser_motion_layout_scene">

    <ImageView
        android:id="@+id/company_logo3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/company_logo"
        android:paddingTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/company_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"

        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_logo3" />

    <TextView
        android:id="@+id/userNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_vehicle_id"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/userNameET"
        app:layout_constraintTop_toBottomOf="@+id/loginTV" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        app:backgroundTint="#f1f1f1"
        app:fabCustomSize="65dp"
        app:layout_constraintStart_toStartOf="@+id/userNameET"
        app:layout_constraintTop_toBottomOf="@+id/userNameTV"
        app:srcCompat="@drawable/ic_email_black_24dp" />

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:background="@drawable/et_box"
        android:inputType="textEmailAddress"
        android:paddingLeft="70dp"
        android:paddingRight="15dp"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginTV"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton3" />

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailRel"
        android:layout_marginTop="16dp"
        android:paddingTop="10dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/userNameET"
        app:layout_constraintTop_toBottomOf="@+id/userNameET" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:clickable="false"
        app:backgroundTint="#f1f1f1"
        app:fabCustomSize="65dp"
        app:layout_constraintStart_toStartOf="@+id/passwordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordTV"
        app:srcCompat="@drawable/ic_lock_black_24dp" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:background="@drawable/et_box"
        android:inputType="textPassword"
        android:paddingStart="70dp"
        android:paddingEnd="35dp"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton5"
        app:layout_constraintEnd_toEndOf="@+id/userNameET"
        app:layout_constraintStart_toStartOf="@+id/passwordTV"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton5" />

    <ImageButton
        android:id="@+id/viewPass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_baseline_visibility_off_24px"
        app:layout_constraintBottom_toBottomOf="@+id/passwordET"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintTop_toTopOf="@+id/passwordET" />

    <Button
        android:id="@+id/logInBT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_bt"
        android:elevation="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

</androidx.constraintlayout.motion.widget.MotionLayout>